Update version to 2.0.0, add PaperMC repository, and refactor message handling in GUI classes to use formatted components for improved readability and consistency.